<resources>
    <string name="app_name">Go</string>
    <string name="Enter_your_First_Name">Enter your new first name</string>
    <string name="Enter_your_Last_Name">Enter your new last name</string>
    <string name="Enter_your_Address">Enter your new address</string>
    <string name="Enter_your_Email">Enter your new email</string>
    <string name="Enter_your_Phone">Enter your new phone</string>
    <string name="Enter_your_Password">Enter your password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_list">ListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>