<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_editPro1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.MainActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:gravity="center" android:paddingTop="15dp" android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView android:layout_width="110dp"
            android:layout_height="110dp" android:src="@drawable/avatr" />

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="Tristian Nguyen" android:textColor="#0F97A9" android:textSize="20dp"
            android:layout_marginTop="8dp" android:textStyle="bold" />

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="Viet Nam" android:textColor="#0F97A9" android:textSize="18dp"
            android:layout_marginTop="3dp" />

        <View android:layout_width="match_parent" android:layout_height="1dp"
            android:background="#0F97A9" android:layout_marginTop="10dp" />

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="horizontal" android:paddingLeft="15dp" android:paddingRight="15dp"
        android:layout_marginTop="20dp" android:gravity="center_vertical">

        <ImageView android:layout_width="30dp" android:layout_height="30dp"
            android:src="@drawable/ic_person" />

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="First Name" android:textStyle="bold" android:textColor="@color/black"
            android:textSize="20dp" android:layout_marginLeft="5dp" />

        <EditText android:id="@+id/edtFirstName" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginLeft="25dp"
            android:hint="@string/Enter_your_First_Name"
            android:inputType="textCapWords|textAutoCorrect" android:textSize="18dp" />

    </LinearLayout>

    <View android:layout_width="match_parent" android:layout_height="0.5dp"
        android:background="@android:color/darker_gray" android:layout_marginTop="10dp"
        android:layout_marginRight="15dp" android:layout_marginLeft="15dp" />

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="horizontal" android:paddingLeft="15dp" android:paddingRight="15dp"
        android:layout_marginTop="20dp" android:gravity="center_vertical">

        <ImageView android:layout_width="30dp" android:layout_height="30dp"
            android:src="@drawable/ic_person" />

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="Last Name" android:textStyle="bold" android:textColor="@color/black"
            android:textSize="20dp" android:layout_marginLeft="5dp" />

        <EditText android:id="@+id/edtLastName" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginLeft="26dp"
            android:hint="@string/Enter_your_Last_Name"
            android:inputType="textCapWords|textAutoCorrect" android:textSize="18dp" />

    </LinearLayout>

    <View android:layout_width="match_parent" android:layout_height="0.5dp"
        android:background="@android:color/darker_gray" android:layout_marginTop="10dp"
        android:layout_marginRight="15dp" android:layout_marginLeft="15dp" />

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="horizontal" android:paddingLeft="15dp" android:paddingRight="15dp"
        android:layout_marginTop="20dp" android:gravity="center_vertical">

        <ImageView android:layout_width="30dp" android:layout_height="30dp"
            android:src="@drawable/ic_email" />

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="Email" android:textStyle="bold" android:textColor="@color/black"
            android:textSize="20dp" android:layout_marginLeft="5dp" />

        <EditText android:id="@+id/edtEmailName" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginLeft="73dp"
            android:hint="@string/Enter_your_Email" android:inputType="textCapWords|textAutoCorrect"
            android:textSize="18dp" />

    </LinearLayout>

    <View android:layout_width="match_parent" android:layout_height="0.5dp"
        android:background="@android:color/darker_gray" android:layout_marginTop="10dp"
        android:layout_marginRight="15dp" android:layout_marginLeft="15dp" />

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginTop="20dp" android:gravity="center_vertical"
        android:orientation="horizontal" android:paddingLeft="15dp" android:paddingRight="15dp">

        <ImageView android:layout_width="30dp" android:layout_height="30dp"
            android:src="@drawable/ic_phone" />

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginLeft="5dp" android:text="Phone" android:textColor="@color/black"
            android:textSize="20dp" android:textStyle="bold" />

        <EditText android:id="@+id/edtPhone" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginLeft="66dp"
            android:hint="@string/Enter_your_Phone" android:inputType="textCapWords|textAutoCorrect"
            android:textSize="18dp" />

    </LinearLayout>

    <View android:layout_width="match_parent" android:layout_height="0.5dp"
        android:background="@android:color/darker_gray" android:layout_marginTop="10dp"
        android:layout_marginRight="15dp" android:layout_marginLeft="15dp" />

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="horizontal" android:paddingLeft="15dp" android:paddingRight="15dp"
        android:layout_marginTop="20dp" android:gravity="center_vertical">

        <ImageView android:layout_width="30dp" android:layout_height="30dp"
            android:src="@drawable/ic_home" />

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="Address" android:textStyle="bold" android:textColor="@color/black"
            android:textSize="20dp" android:layout_marginLeft="5dp" />

        <EditText android:id="@+id/edtAddress" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginLeft="48dp"
            android:hint="@string/Enter_your_Address"
            android:inputType="textCapWords|textAutoCorrect" android:textSize="18dp" />

    </LinearLayout>

    <View android:layout_width="match_parent" android:layout_height="0.5dp"
        android:background="@android:color/darker_gray" android:layout_marginTop="10dp"
        android:layout_marginRight="15dp" android:layout_marginLeft="15dp" />


    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginTop="35dp" android:gravity="center" android:orientation="vertical">

        <TextView android:layout_width="180dp" android:layout_height="50dp"
            android:background="@drawable/bg_btn" android:text="Save" android:gravity="center"
            android:textColor="#0F97A9" android:textSize="18dp"
            android:drawableLeft="@drawable/ic_save" android:paddingLeft="20dp"
            android:layout_marginLeft="-10dp" />

    </LinearLayout>

</LinearLayout>