<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_editPro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.EditProfile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="20dp">

            <include layout="@layout/toolbar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="5dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/btnCamera"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:src="@drawable/avatr" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Tristian Nguyen"
                    android:textColor="#0F97A9"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="#0F97A9" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_person" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="First Name"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"
                   />

                <EditText
                    android:id="@+id/edtFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:hint="@string/Enter_your_First_Name"
                    android:inputType="textCapWords|textAutoCorrect"
                    android:textSize="14dp"
                    android:textColor="@color/black"
                    android:background="@android:color/transparent"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_person" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="Last Name"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="26dp"
                    android:hint="@string/Enter_your_Last_Name"
                    android:inputType="textCapWords|textAutoCorrect"
                    android:textSize="14dp"
                    android:textColor="@color/black"
                    android:background="@android:color/transparent" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_email" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="Email"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtEmailName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="73dp"
                    android:hint="@string/Enter_your_Email"
                    android:inputType="textCapWords|textAutoCorrect"
                    android:textSize="14dp"
                    android:textColor="@color/black"
                    android:background="@android:color/transparent" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_phone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="Phone"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="66dp"
                    android:hint="@string/Enter_your_Phone"
                    android:inputType="textCapWords|textAutoCorrect"
                    android:textSize="14dp"
                    android:textColor="@color/black"
                    android:background="@android:color/transparent" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_home" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="Address"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="48dp"
                    android:hint="@string/Enter_your_Address"
                    android:inputType="textCapWords|textAutoCorrect"
                    android:textSize="14dp"
                    android:textColor="@color/black"
                    android:background="@android:color/transparent" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="20dp" android:gravity="center_vertical"
                android:orientation="horizontal" android:paddingLeft="15dp" android:paddingRight="15dp">

                <ImageView android:layout_width="30dp" android:layout_height="30dp"
                    android:src="@drawable/ic_add_card" />

                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp" android:text="ID Card" android:textColor="@color/black"
                    android:textSize="20dp" android:textStyle="bold" />

            </LinearLayout>

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginLeft="75dp" android:layout_marginTop="5dp" android:text="Before"
                android:textColor="@android:color/darker_gray" android:textSize="15dp" />

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                android:gravity="center_horizontal" android:orientation="vertical" android:paddingTop="5dp">

                <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent" android:gravity="center_horizontal">

                    <ImageView
                        android:layout_width="300dp" android:layout_height="150dp"
                        android:adjustViewBounds="true"
                        android:cropToPadding="false" android:src="@drawable/card"/>

                    <ImageView
                        android:id="@+id/btnCamera1"
                        android:layout_width="50dp" android:layout_height="50dp"
                        android:layout_centerHorizontal="true" android:layout_centerVertical="true"
                        android:adjustViewBounds="true" android:cropToPadding="false"
                        android:src="@drawable/ic_add_a_photo" />

                </RelativeLayout>

            </LinearLayout>

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginLeft="75dp" android:layout_marginTop="10dp" android:text="After"
                android:textColor="@android:color/darker_gray" android:textSize="15dp" />

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                android:gravity="center" android:orientation="vertical" android:paddingTop="5dp">

                <RelativeLayout
                    android:layout_width="match_parent" android:layout_height="match_parent" android:gravity="center_horizontal">

                    <ImageView
                        android:layout_width="300dp"
                        android:layout_height="150dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/card" />

                    <ImageView
                        android:id="@+id/btnCamera2"
                        android:layout_width="50dp" android:layout_height="50dp"
                        android:layout_centerHorizontal="true" android:layout_centerVertical="true"
                        android:adjustViewBounds="true" android:cropToPadding="false"
                        android:src="@drawable/ic_add_a_photo" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_add_card" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="Driver license"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="75dp"
                android:layout_marginTop="5dp"
                android:text="Before"
                android:textColor="@android:color/darker_gray"
                android:textSize="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="5dp">

                <RelativeLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:gravity="center_horizontal">

                    <ImageView
                        android:layout_width="300dp"
                        android:layout_height="150dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/card" />

                    <ImageView
                        android:id="@+id/btnCamera3"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:adjustViewBounds="true"
                        android:cropToPadding="false"
                        android:src="@drawable/ic_add_a_photo" />


                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="75dp"
                android:layout_marginTop="10dp"
                android:text="After"
                android:textColor="@android:color/darker_gray"
                android:textSize="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="5dp">

                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:gravity="center_horizontal">

                    <ImageView
                        android:layout_width="300dp"
                        android:layout_height="150dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/card" />

                    <ImageView
                        android:id="@+id/btnCamera4"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:adjustViewBounds="true"
                        android:cropToPadding="false"
                        android:src="@drawable/ic_add_a_photo" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/btnSave"
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="-5dp"
                    android:background="@drawable/bg_btn"
                    android:drawableLeft="@drawable/ic_done"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:text="Done"
                    android:textColor="#0F97A9"
                    android:textSize="18dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>